[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"


[project]
name = "simple-http-checker"
version = "0.1.0"
description = "A simple HTTP checker tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.1,<3.0.0",
    "click>=8.0,<9.0"
]

[project.optional-dependencies]     
dev = [
    "ruff",
    "black"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88